delete and put requests added as well as validation
