# controllers/quotes.js
@@ -1,4 +1,5 @@
 let Quote = require("../models/quote");
+let helperFunctions = require("../library/functions");
 
 
 
@@ -20,11 +21,13 @@ module.exports.getQuotes = async function(req, res) {
 // post a quote
 module.exports.addQuote = function(req, res) {
 
-    /*    #swagger.parameters['obj'] = {
-              in: 'body',
-              description: 'Adding new user.',
-              schema: { $ref: '#/definitions/AddQuote' }
-      } */
+    //validate the data
+
+    let { value, error } = helperFunctions.validateNewPost(req.body);
+
+    if (error) {
+        return res.status(400).json({ "error": error.details[0].message })
+    }
 
     Quote.create(req.body)
         .then(val => {
@@ -47,4 +50,35 @@ module.exports.getQuoteById = async function(req, res) {
 
 
     return quote;
+}
+
+//delete quote by id
+module.exports.deleteQuoteById = function(req, res) {
+    Quote.findByIdAndDelete(req.params.id)
+        .then(val => {
+            return res.json({ "message": "The quote was successfully deleted" });
+        })
+        .catch(err => {
+            return res.json({ "message": "Sorry, quote was not deleted" });
+        })
+}
+
+
+//update quote
+module.exports.updateQuoteById = (req, res) => {
+
+    let { value, error } = helperFunctions.validePostUpdate(req.body);
+
+    if (error) {
+        return res.status(400).json({ "error": error.details[0].message });
+    }
+
+    Quote.findByIdAndUpdate(req.params.id, req.body)
+        .then(val => {
+            res.statusCode = 204;
+            return res.json({ "message": "The quote was successfully updated" });
+        })
+        .catch(err => {
+            return res.json({ "message": "Sorry, the quote was not updated" });
+        })
 }
